--- a/web/troli.css
+++ b/web/troli.css
@@ -2,7 +2,7 @@ h2{
   letter-spacing: 1px;
   margin-top: 20px;
   margin-bottom: 20px;
-  font-size: large;
+  font-variant: small-caps;
 }
 
 h2:first-letter {
@@ -18,7 +18,6 @@ p{
 #def{
   font-style: italic;
   text-align: center;
-  text-align: justify;
 }
 
 #jaratviszonylatok{
@@ -57,8 +56,12 @@ p{
   cursor: pointer;
   padding: 10px;
   border-radius: 10px; 
-  }
+}
 
 #felGomb:hover{
   background-color: #555;
+}
+
+#def{
+  text-align: justify;
 }
